assets/styles/wall.css
.main-container {
    display: flex;
    flex-direction: column;
    height: 15vh;
    margin-top: 5vh;
    padding-left: 6.7em;
    background: #fafafa;
}

.breadcrumb {
    cursor: pointer;
}

.main-title {
    font-weight: 700;
    font-size: 2em;
    margin: 0;
}

.wall {
    margin-left: 6.7em;
    margin-right: 6.7em;
    display: grid;
    grid-template-columns: [line1] 30% [line2] 70% [line3];
    grid-template-rows: [rowline1]1fr[rowline2];
    gap: 15px;
}

.important-notice {
    box-shadow: 1px 2px 4px lightgray;
    display: flex;
    flex-direction: column;
    transition: all ease-in-out 0.5s;
    padding: 20px;
    background: white;
    border-radius: 10px;
}

.common-wall {
    box-shadow: 1px 2px 4px lightgray;
    padding: 20px;
    background: white;
    transition: all ease-in-out 0.5s;
    border-radius: 10px;
}

.grid-title {
    font-weight: 600;
    font-size: 1.2em;
    text-align: center;
    margin: 5px;
}

.filter-box {
    box-shadow: 1px 2px 4px lightgray;
    border: 1px solid lightgray;
    padding: 3px 3px;
    margin: 0.8em 3px;
    display: flex;
    flex-direction: row;
    border-radius: 5px;
    justify-content: space-between;
    background: white;
}

.btn {
    cursor: pointer;
    border-radius: 5px;
    color: white;
    transition: all ease-in-out 0.1s;
    height: 25px;
}

.filter-btn {
    width: 38%;
    background: gray;
    border: 1px solid gray;
    font-family: 'Nunito', serif;
}

.filter-btn:hover {
    background: white;
    border-color: black;
    color: black;
}

.upload-btn {
    height: 20px;
    font-size: 12px;
    width: fit-content;
    padding: 0 3px;
}

.create-notice-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: flex;
    flex-direction: column;
    padding: 3px;
    margin: 0.8em 0;
}

.edit-notice-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: none;
    flex-direction: column;
    padding: 3px;
    margin: 0.8em 0;
}

.create-notice-text {
    resize: none;
    overflow: hidden;
    overflow-y: scroll;
    width: 100%;
    height: 10em;
    margin: 0 0.8em;
    border: 1px solid lightgray;
    border-radius: 5px;
    padding: 10px;
    text-align: center;
}

.box-title {
    font-weight: 600;
    font-size: 1em;
    text-align: center;
    margin: 0.8em 0;
}

.row-1 {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.row-1-gap {
    margin-top: 1em;
}

.row-2 {
    justify-content: center;
    display: flex;
}

.row-2 > label {
    text-align: center;
    margin: 0.8em 0;
    font-size: 14px;
    font-weight: 400;
    padding-top: 3px;
}

.row-3 {
    justify-content: center;
    display: flex;
}

.row-4 {
    margin-top: 0.2em;
    justify-content: center;
    display: flex;
    padding: 5px 0;
}

.row-4 > button {
    flex-direction: row;
    width: 30%;
    margin: 0 0.4em;
}

.field-header {
    border: 1px solid lightgray;
    color: gray;
    margin: 0 0.8em;
    border-radius: 5px;
    width: 50%;
}

.input-field-title {
    width: 100%;
    height: 25px;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;

    font-family: "Nunito", serif;
    margin: 0 0.8em;
    display: flex;
    justify-content: center;
}

.input-field-title:hover, .field-header:hover, .create-notice-text:hover, .create-post-title:hover,
.create-post-text:hover, .field-hover:hover {
    border-color: #ffccc7;
}

.input-field-message {
    width: 100%;
    height: 100px;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    font-family: "Nunito", serif;
    text-align: center;
    margin: 0 0.8em;
}

.notice-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: flex;
    flex-direction: column;
    padding: 3px;
    margin: 0.8em 0;
}

.notice-content {
    border: 1px solid lightgray;
    height: 10em;
    margin: 0 0.8em;
    border-radius: 5px;
    display: flex;
    justify-content: center;
}

.star-div-off {
    display: block;
    color: gray;
    margin: 0 0.8em;
    cursor: pointer;
}

.star-div-on {
    display: none;
    color: rgb(255, 115, 0);
    margin: 0 0.8em;
}

.edit-btn:hover {
    background: #fa8c16;
    border: 1px solid #fa8c16;
    color: white;
}

.dlt-btn:hover {
    background: #f5222d;
    border: 1px solid #f5222d;
    color: white;
}

.image-box {
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    height: 150px;
    width: 500px;
    align-items: center;
    margin: 0 0.8em;
    object-fit: scale-down;
}

.image-box-notice {
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    height: 100px;
    width: 100px;
    align-items: center;
    margin: 0.8em 120px;
}

.box-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.create-post-box {
    border: 1px solid lightgray;
    box-shadow: 1px 2px 4px lightgray;
    border-radius: 10px;
    transition: all ease-in-out 0.5s;
    display: none;
    flex-direction: column;
    flex-grow: 1;
    margin: 0.8em 3px;
}

.row-0 {
    display: flex;
    flex-direction: row;
}

.wall-top-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.wall-top-row > p {
    margin-left: 18em;
}

.create-post-button {
    width: 100px;
    margin-top: 0.4em;
    margin-left: 20em;
}

.create-post-button:hover {
    background: #237804;
    border-color: #237804;
    color: white;
}

.create-post-title {
    margin: 0.8em;
    text-align: center;
    background: white;
    border: 1px solid lightgray;
    border-radius: 5px;
    color: gray;
    font-family: "Nunito", serif;
}
/* ... */

